--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = "A lightweight background service that monitors Notion databases f
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "httpx>=0.28.1",
     "python-dotenv>=1.1.1",
 ]
